--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
         <!-- SECCIÓN 1: CÓMPUTO MÉTRICO -->
         <!-- IMPORTANTE: Reemplaza el '#' con tu URL real -->
-        <a href="URL_DEL_COMPUTO_AQUI" target="_blank" class="hero-card rounded-2xl p-6 group no-underline fade-in-up delay-2">
+        <a href="https://app.powerbi.com/view?r=eyJrIjoiZWQ0NWJlYTItMjVlNy00NjU5LWJkODUtNDk3ZTRhMGQwMTI4IiwidCI6IjI2MWYyOGVmLWZlNmYtNGZmMi1hMzY4LTU1YTVmZjRhYmYwOCIsImMiOjR9&pageName=fda4f783057bcdfbb1c6"_blank" class="hero-card rounded-2xl p-6 group no-underline fade-in-up delay-2">
             <!-- Icono decorativo de fondo -->
             <i data-lucide="bar-chart-3" class="card-bg-icon"></i>
             
@@ -207,4 +207,5 @@
     </script>
 </body>
 </html>
+
 ```
